--- a/views/home.html
+++ b/views/home.html
@@ -42,6 +42,10 @@
                     <i class="fas fa-brain"></i> Jogo - Memória Oceânica
                 </button>
 
+                <button class="redirect-button" onclick="window.location.href='/quiz'">
+                    <i class="fas fa-circle-question"></i> Quiz - Teste sobre preservação
+                </button>
+
                 <button class="redirect-button" onclick="window.location.href='/chat'">
                     <i class="fas fa-robot"></i> I.A - Converse com Nemo
                 </button>
