--- a/views/home.html
+++ b/views/home.html
@@ -48,6 +48,10 @@
                     <i class="fas fa-puzzle-piece"></i> Quiz - Fuja sem bater
                 </button>
 
+                <button class="redirect-button" onclick="window.location.href='https://pt.quizur.com/trivia/quiz-sobre-a-poluicao-dos-oceanos-HEap'">
+                    <i class="fas fa-puzzle-piece"></i> Quiz - Teste sobre Poluição
+                </button>
+
                 <button class="redirect-button" onclick="window.location.href='/quiz'">
                     <i class="fas fa-circle-question"></i> Quiz - Teste sobre preservação
                 </button>
