--- a/views/home.html
+++ b/views/home.html
@@ -49,7 +49,7 @@
                 </button>
 
                 <button class="redirect-button" onclick="window.location.href='https://pt.quizur.com/trivia/quiz-sobre-a-poluicao-dos-oceanos-HEap'">
-                    <i class="fas fa-puzzle-piece"></i> Quiz - Teste sobre Poluição
+                    <i class="fas fa-recycle"></i> Quiz - Teste sobre Poluição
                 </button>
 
                 <button class="redirect-button" onclick="window.location.href='/quiz'">
